featrue dark mode and fix styles

--- a/chat/src/app/app.component.scss
+++ b/chat/src/app/app.component.scss
@@ -3,31 +3,20 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 50px;
 }
 
 .chat-model {
-  width: 1000px;
+  width: 95%;
 }
 
 .chat-container {
-  width: 1000px;
-  height: 800px;
+  width: 95%;
+  height: 95vh;
   border: 1px solid #ccc;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-}
-
-@media (max-width: 1000px) {
-  .chat-container {
-    width: 100%;
-  }
-
-  .chat-model {
-    width: 100%;
-  }
 }
 
 .messages-container {
@@ -69,26 +58,58 @@
   div {
     display: flex;
   }
+
+  &.dark {
+    background-color: #444;
+    color: snow;
+  }
 }
 
 markdown {
   display: inline-block;
-  max-width: 900px;
+  // max-width: 900px;
+  max-width: 80vw;
   background-color: aliceblue;
+  color: black;
   border-radius: 10px;
   padding: 0px 10px;
   text-align: left;
+
+  &.dark {
+    background-color: #555;
+    color: snow;
+  }
 }
 
 markdown.bot {
   background-color: honeydew;
+  color: black;
+
+  &.dark {
+    background-color: #444;
+    color: snow;
+  }
 }
 
 input {
   flex: 1;
-  padding: 5px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
+  padding: 10px;
+  border: none;
+  border-radius: 50px;
+
+  &.dark {
+    background-color: #555;
+    color: snow;
+  }
+
+  &:focus {
+    outline: none;
+  }
+}
+
+select.dark {
+  background-color: #444;
+  color: snow;
 }
 
 button {
@@ -122,7 +143,7 @@ button.stop:hover {
 }
 
 .system-prompt {
-  height: 30px;
+  height: 35px;
   transition: all 0.1s linear;
 }
 
