--- a/chat/src/styles.scss
+++ b/chat/src/styles.scss
@@ -1,6 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
 html {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  --dark-background-color: #333;
+  --dark-color: snow;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.dark-mode {
+  background-color: var(--dark-background-color);
+  color: var(--dark-color);
 }
 
 
